--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,17 @@
-compile : main.c
-	gcc main.c -o main
+GCC = gcc
+INCLUDE = -I ../include
+SRC = displayShell.c struct.c main.c
+OBJ= $(SRC:.c=.o)
+EXEC = ./main
 
-run : main
-	./main
+all : compile run
+
+compile : $(SRC)
+	$(GCC) $(INCLUDE) -c $(SRC)
+	$(GCC) -o $(EXEC) $(OBJ)
+
+run : $(EXEC)
+	$(EXEC)
 
 clean : 
-	rm main
+	rm $(EXEC) $(OBJ)
