Makefile displayShell release

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,16 +2,20 @@ GCC = gcc
 INCLUDE = -I ../include
 SRC = displayShell.c struct.c main.c
 OBJ= $(SRC:.c=.o)
-EXEC = ./main
+LIB = ../lib
+EXEC = ./../bin/main
+
 
 all : compile run
 
 compile : $(SRC)
 	$(GCC) $(INCLUDE) -c $(SRC)
 	$(GCC) -o $(EXEC) $(OBJ)
+	mv $(OBJ) $(LIB)
+
 
 run : $(EXEC)
 	$(EXEC)
 
 clean : 
-	rm $(EXEC) $(OBJ)
+	rm $(EXEC) $(LIB)/*.o
